objects/Sighting__c.object
<CustomObject>
    <description>The recorded sighting of a species in time and space.</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date at which the sighting was done.</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Precision__c</fullName>
        <description>Precision of the Sighting Location coordinates.</description>
        <label>Location Precision</label>
        <picklist>
            <picklistValues>
                <fullName>10 meters</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>100 meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000 meters</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location of the sighting.</description>
        <label>Location</label>
        <required>true</required>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Number_of_Animals__c</fullName>
        <label>Number of Animals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Species_Group__c</fullName>
        <label>Species Group</label>
        <picklist>
            <picklistValues>
                <fullName>Mammals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fungi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arachnids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butterflies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dragonflies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diptera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hymenoptera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other invertebrates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birds</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Species</label>
        <referenceTo>Species__c</referenceTo>
        <relationshipLabel>Sightings</relationshipLabel>
        <relationshipName>Sightings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Species Group Expert who validated the record. May be blank if the record was validated automatically.</description>
        <label>Validated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ValidatedSightings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <description>Validation Status of the Sighting, should default to &apos;Not Validated&apos;.</description>
        <label>Validation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Validated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sighting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Species__c</columns>
        <columns>Number_of_Animals__c</columns>
        <columns>Date__c</columns>
        <columns>Validation_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Location__Latitude__s</columns>
        <columns>Location__Longitude__s</columns>
        <columns>Location_Precision__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Bird_Sightings</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Species__c</columns>
        <columns>Validation_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Bird Sightings</label>
    </listViews>
    <listViews>
        <fullName>My_Sightings</fullName>
        <columns>NAME</columns>
        <columns>Species__c</columns>
        <columns>Date__c</columns>
        <columns>Validation_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Sightings</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Sighting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sightings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Number_of_Animals_Required_for_Approved</fullName>
        <active>true</active>
        <description>If Status is &apos;Approved&apos; the Number of Animals must be &gt; 0</description>
        <errorConditionFormula>AND(
BLANKVALUE(Number_of_Animals__c,0) &lt;= 0,
ISPICKVAL(Validation_Status__c,&quot;Approved&quot;)
)</errorConditionFormula>
        <errorMessage>Number of Animals must be greater than 0 in order to approve a Sighting</errorMessage>
    </validationRules>
</CustomObject>